# virus2

./: CMakeLists.txt  citizen.h  horror_movie_2.nfo  monster.h  smalltown.h  todo
test/: correctness.cpp  horror_example.cpp
